--- a/pages/nf4514/n12569219.md
+++ b/pages/nf4514/n12569219.md
@@ -46,6 +46,24 @@
  情况的实时更新：
 </h4>
 <h3>
+ 川普竞选团队宾州提诉 上诉法院批准加急审理
+</h3>
+<p>
+ 根据川普（特朗普）竞选团队律师詹娜·埃利斯（Jenna Ellis）的说法，唐纳德·川普总统（Donald Trump）竞选团队周一（11月23日）法律战取得法律。——美国第三巡回上诉法院批准宾夕法尼亚州法院加急审理其上诉。
+</p>
+<p>
+ 根据命令，在法院指导下，川普“加急审理动议得到批准”。
+</p>
+<p>
+ 现在，他们需要在11月23日周一下午4点之前提交案情简介，并在周二下午4点之前提交更多相关文件。“法庭将建议是否需要口头辩论。”命令中说。
+</p>
+<p>
+ 宾夕法尼亚州的67个县计划在周一结束之前证明其选举结果，然后再将其递交给州选举官员。
+</p>
+<p>
+ （未完）
+</p>
+<h3>
  参议员：川普竞选团队的法律努力“恰当”
 </h3>
 <figure class="wp-caption aligncenter" id="attachment_12569935" style="width: 600px">
