--- a/pages/nsc412/n12569219.md
+++ b/pages/nsc412/n12569219.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.23】鲍威尔：禁共产主义者窃国" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/Sidney-Powell-EpochTimes_510A8666-1-1-600x400.jpg"/>
+<div><img alt="【大选更新11.23】上诉法院：急审宾州诉讼案" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229295633-600x400.jpg"/>
 <div class="caption">
- 图为著名律师鲍威尔（Sidney Powell）。(Drew Angerer/Getty Images)
+ 图为2020年10月26日，美国宾夕法尼亚州利蒂茨（Lititz），总统川普在兰开斯特机场举行竞选集会。(SAUL LOEB/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -45,6 +45,24 @@
  </ok>
  情况的实时更新：
 </h4>
+<h3>
+ 川普竞选团队宾州提诉 上诉法院批准加急审理
+</h3>
+<p>
+ 根据川普（特朗普）竞选团队律师詹娜·埃利斯（Jenna Ellis）的说法，唐纳德·川普总统（Donald Trump）竞选团队周一（11月23日）法律战取得法律。——美国第三巡回上诉法院批准宾夕法尼亚州法院加急审理其上诉。
+</p>
+<p>
+ 根据命令，在法院指导下，川普“加急审理动议得到批准”。
+</p>
+<p>
+ 现在，他们需要在11月23日周一下午4点之前提交案情简介，并在周二下午4点之前提交更多相关文件。“法庭将建议是否需要口头辩论。”命令中说。
+</p>
+<p>
+ 宾夕法尼亚州的67个县计划在周一结束之前证明其选举结果，然后再将其递交给州选举官员。
+</p>
+<p>
+ （未完）
+</p>
 <h3>
  参议员：川普竞选团队的法律努力“恰当”
 </h3>
