--- a/pages/p3/953552.md
+++ b/pages/p3/953552.md
@@ -1,4 +1,4 @@
-### 疑涉非法赌博广告推广 百度元老史有才被拘(图)
+### 美国病毒专家：疫苗非常有效(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="" src="https://img2.secretchina.com/pic/2019/10-4/p2532501a423746940-ss.jpg"/>
+  <img alt="美国 疫情 疫苗" src="https://img3.secretchina.com/pic/2020/9-8/p2771991a270501521-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   卷非法赌网广告业务，百度元老史有才被拘。示意图（图片来源：GREG BAKER/AFP/Getty Images ）
+   周日，美国两位中共病毒主要专家表示，两款正在接受最终审查的疫苗“非常有效”。（疫苗示意图/非本文图片/图片来源：Photo by Leonardo Fernandez Viloria/Getty Images）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,61 +21,61 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年9月28日讯】（看中国记者苗薇综合报导）中国搜索引擎巨头
+  【看中国2020年11月24日讯】周日，
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/百度" target="_blank">
-    百度
+   美国
+  </strong>
+  两位
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/中共病毒" target="_blank">
+    中共病毒
    </span>
-   公司
+   (又称新冠状病毒，COVID-19)
   </strong>
-  再爆丑闻。据陆媒报导，百度元老、百度移动生态事业群特别顾问
+  主要专家表示，两款正在接受最终审查的疫苗“非常有效”，他们个人不会担心接种这些
   <strong>
-   史有才
+   疫苗
   </strong>
-  于9月15日在杭州机场被带走，原因可能是推广
-  <strong>
-   非法赌博网站
-  </strong>
-  。
+  ，反而对美国公众对疫苗的持续怀疑态度表示担忧。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  澎湃新闻9月27日报导，
-  <span href="https://www.secretchina.com/news/gb/tag/史有才" target="_blank">
-   史有才
+  据美国之音报导，美国政府研发
+  <span href="https://zh.wikipedia.org/wiki/2019%E5%86%A0%E7%8A%B6%E7%97%85%E6%AF%92%E7%97%85" target="_blank">
+   中共病毒
   </span>
-  被带走的消息于9月24日传出。从知情人士处获悉，9月15日顾问史有才在杭州机场被嘉兴警方带走，因推广非法赌博网站，相关的部分代理商和客户也已被带走。
+  疫苗的“曲速行动”的首席科学顾问蒙塞夫・斯劳伊（Moncef Sloui）周日表示，“这些疫苗非常有效。”“我对打疫苗没有任何不舒服。”
  </p>
  <p>
-  报导引述知情人表示，史有才被带走还可能“涉嫌和渠道直接的腐败”，百度高层知道此事。对此，
-  <span href="https://zh.wikipedia.org/zh-hans/%E7%99%BE%E5%BA%A6" target="_blank">
-   百度
+  辉瑞生物科技（Pfizer BioNTech）和莫德纳公司（Moderna）的制药团队分别研发的中共病毒
+  <span href="https://www.secretchina.com/news/gb/tag/疫苗" target="_blank">
+   疫苗
   </span>
-  回应说“不予置评。”
+  在测试中，显示了95%的有效性，目前正在等待美国政府的批准，以便普遍使用。
  </p>
  <p>
-  另据微信公众号《新零售百科》独家披露，史有才涉及的
-  <span href="https://www.secretchina.com/news/gb/tag/非法赌博广告" target="_blank">
-   非法赌博广告
+  政府的审查很可能在未来几周内完成，数百万剂的疫苗可能在今年年底前可供使用，最初施打对象是针对医护人员和养老院中最脆弱的老年人。
+ </p>
+ <p>
+  但
+  <span href="https://www.secretchina.com/news/gb/tag/美国" target="_blank">
+   美国
   </span>
-  业务与百度有关，该非法业务一天可带来1000万元的收入，一年涉及的非法赌博帐户消费金额在40亿元左右。据悉，业务的执行者是分布在全国的代理商，都是史有才招的，或涉及上千人。
+  的全国民意调查显示，大约40%的美国人对接种疫苗仍持不确定的态度。
  </p>
  <p>
-  公开资料显示，史有才于2001年加入百度，是百度初创团队成员之一，负责百度销售体系的建设，历任销售总监、渠道部高级总监、副总裁等要职。2011年，百度发内部邮件，宣布史有才离职。2019年6月，史有才回归百度，而在此之前一个月，百度高级副总裁向海龙离职。今次史有才被带走，距其重回百度仅1年零3个月。
- </p>
- <p>
-  此外，史有才还是现任海致网络技术（北京）有限公司联合创始人、首席财务官。据悉，该公司于2013年成立，注资4,500万美元，经营范围为电脑软硬件的技术开发、转让、服务、咨询、培训等。
+  斯劳伊说，“我非常担心这种怀疑态度。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -90,7 +90,7 @@
   </div>
  </center>
  <p>
-  除了史有才，市场早前还有传闻，称百度大客户部（KA）总经理李忠军被江西公安拘捕，同样是涉嫌违法违规推广赌博网站，涉案金额巨大。此外，今年四月，百度职业道德委员会发布通告称，原集团副总裁韦方涉嫌贪腐犯罪，移送公安机关依法处理。
+  美国顶级传染病专家安东尼・弗契医生，也在哥伦比亚广播公司的“面向全国”节目中说，他也不怕接种疫苗。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +105,7 @@
   </div>
  </center>
  <p>
-  百度非法赌博广告业务早有苗头。《澎湃新闻网》去年5月曾报导，百度涉及推广非法赌博网站，百度贴吧“柬埔寨吧”中出现大量赌场招聘讯息。
+  他说：“如果我是被推荐的施打人群的成员，我肯定会接种疫苗。”“我会毫不犹豫地接种疫苗。我也会毫不犹豫地把疫苗推荐给我的家人。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,11 +120,37 @@
   </div>
  </center>
  <p>
-  报导指，一名自称在柬埔寨赌博公司工作的发帖人指，他们招募的推广人员以网络聊天的方式，以谈男女朋友为名，诱骗大陆民众参与网上赌博。另有发帖人表示，某些公司发布的招聘前台、在线客服等岗位信息，实际是招募推广人员，从而引诱
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  民众参与柬埔寨赌博，且参赌人员输得越多，推广人员提成越高。
+  他说，假设食品和药物管理局在审查后批准了这些疫苗，“当美国公众听到这个消息时，你应该确信它们是安全的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  他说，“从12月中旬到年底，2000万人可以接种疫苗，1月和2月甚至更多。我们需要让尽可能多的人接种疫苗。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  他说，如果大量的人接种疫苗，国家将得到“全面保护”，但如果只有45%或50%的人接种疫苗，情况就不会如此。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +182,7 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
   <center>
@@ -188,13 +214,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947537.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947537.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/947537.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/28/947537.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953552.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953552.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/953552.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/24/953552.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/947537.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/953552.md' width='0px' height='0px'/>
