--- a/pages/nsc412/n12569219.md
+++ b/pages/nsc412/n12569219.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.23】上诉法院：急审宾州诉讼案" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229295633-600x400.jpg"/>
+<div><img alt="【大选更新11.23】华人：神选择了川普" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/5899782c3b434295fd7d0eeef2dda654-600x400.jpg"/>
 <div class="caption">
- 图为2020年10月26日，美国宾夕法尼亚州利蒂茨（Lititz），总统川普在兰开斯特机场举行竞选集会。(SAUL LOEB/AFP via Getty Images)
+ 11月21日，在乔治亚州的亚特兰大举行了支持川普、制止窃选的集会。图为华裔艺术家李深（译音）表示一定要支持川普，保卫民主自由。（新唐人电视台视频截图）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
