--- a/pages/nsc418/n12569219.md
+++ b/pages/nsc418/n12569219.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.23】川普：相信我们会赢！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229420008-600x400.jpg"/>
+<div><img alt="【大选更新11.23】川普：相信我们会赢！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229209434-600x400.jpg"/>
 <div class="caption">
- GSA署长批准权力过渡 川普回应：将继续努力战斗，我相信我们将获胜！图为2020年11月2日，美国北卡罗来纳州费耶特维尔（Fayetteville），川普抵达费耶特维尔地区机场，在竞选集会上发表演说。(BRENDAN SMIALOWSKI/AFP via Getty Images)
+ GSA署长批准权力过渡 川普回应：将继续努力战斗，我相信我们将获胜！图为10月21日，川普在北卡竞选集会上发表讲话。（SAUL LOEB/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
