--- a/pages/nsc412/n12571687.md
+++ b/pages/nsc412/n12571687.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【大选更新11.24】共和党4州提16诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/zhu.jpg"/>
+<div><img alt="【大选更新11.24】共和党4州提多项诉讼" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/zhu.jpg"/>
 <div class="caption">
  2020年11月15日，美国总统川普（特朗普）的私人律师朱利安尼（Rudy Giuliani）表示，已记录足够多的非法选票，他相信总统大选结果将被“翻转”。图为朱利安尼在11月7日于费城召开的新闻发布会上。(BRYAN R. SMITH/AFP via Getty Images)
 </div></div><hr/>
