--- a/pages/nsc412/n12571687.md
+++ b/pages/nsc412/n12571687.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.24】川普：感恩节快乐！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229769149-600x400.jpg"/>
+<div><img alt="【大选更新11.24】川普：感恩节快乐！" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229768919-600x400.jpg"/>
 <div class="caption">
- 2020年11月24日，美国总统川普和第一夫人梅拉尼娅在白宫玫瑰花园举行赦免火鸡的白宫传统活动。今年火鸡“玉米”被川普总统赦免。（MANDEL NGAN/AFP via Getty Images）
+ 2020年11月24日，美国总统川普和第一夫人梅拉尼娅在白宫玫瑰花园举行赦免火鸡的白宫传统活动。川普总统说，“我想祝贺每一个人，道琼斯平均指数刚刚突破了30,000...祝每个美国人健康、感恩节快乐！”（MANDEL NGAN/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
