--- a/pages/nsc412/n12574319.md
+++ b/pages/nsc412/n12574319.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【大选更新11.25】宾州暂停选举结果认证" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/President_Donald_Trump_and_Lin_Wood-600x400.jpg"/>
+<div><img alt="【大选更新11.25】宾州暂停选举结果认证" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/11/11-65.jpg"/>
 <div class="caption">
- 美国顶级大律师林伍德（Lin Wood）周三表示，美国永远不会变成（共产）中国。图为林伍德（左）与川普总统在白宫（2020年3月11日）。（公共领域）
+ 周三（11月25日），宾州法院暂停该州认证选举结果。图为2020年11月5日，川普（特朗普）总统的支持者在宾夕法尼亚州府的台阶上呼吁停止该州的选票统计。(Spencer Platt/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
